<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="floatUnion" Id="{45b045b0-ab79-02ce-2675-364ef5a943e7}">
    <Declaration><![CDATA[TYPE floatUnion : UNION
    value : REAL;
    bytes : ARRAY[0..3] OF BYTE;
    bits : ARRAY[0..3] OF BitStruct;
END_UNION
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>